--- a/services/api/package.json
+++ b/services/api/package.json
@@ -4,10 +4,13 @@
   "main": "src/server.js",
   "type": "commonjs",
   "scripts": {
-    "dev": "node src/server.js"
+    "dev": "nodemon --legacy-watch src/server.js"
   },
   "dependencies": {
     "express": "^4.19.2",
     "pg": "^8.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
