initiate database and test

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./migrations:/docker-entrypoint-initdb.d
 
   api:
     build:
